--- a/src/composants/user/settings/user/setting-appearance/setting-appearance.component.html
+++ b/src/composants/user/settings/user/setting-appearance/setting-appearance.component.html
@@ -13,9 +13,9 @@
 
 <form class="mb-3" [formGroup]="themeForm" *ngIf="themeList">
   <div class="row">
-    <div class="ish-from col mb-3" *ngFor="let th of themeList" style="min-width: 200px">
+    <div class="col-lg-4 col-6 mb-3" *ngFor="let th of themeList">
       <label class="form-check-label border rounded-2 zoom" style="cursor: pointer;{{th.id === value ? 'border-color: #0d6efd!important' : ''}}">
-        <img [src]="'http://localhost:8080/api/v1/image/' + th.image" class="img-fluid border-bottom rounded-top">
+        <div class="border-bottom rounded-top" [innerHTML]="th.image"></div>
         <div class="m-2">
           <input class="mt-1 form-check-input" formControlName="id" (click)="theme(th.id)" type="radio" [value]="th.id">
           <span class="ms-2">{{th.name}}</span>
