--- a/src/composants/user/settings/user/setting-security/setting-security.component.html
+++ b/src/composants/user/settings/user/setting-security/setting-security.component.html
@@ -29,4 +29,36 @@
 <h3 class="pb-2 border-bottom">Two-factor authentication</h3>
 <p>Two-factor authentication adds an additional layer of security to your account by requiring more than just a password to log in.</p>
 
+<div class="list-group mb-3">
+  <div class="list-group-item">
+    <div class="d-flex bd-highlight">
+      <div class="bd-highlight">
+        <p class="mb-1">Two-factor authentication by email</p>
+        <ul class="mb-1">
+          <li><p class="{{user.twoFactorEmail ? 'text-success' : 'text-danger'}} m-0">{{user.twoFactorEmail ? 'Enabled' : 'Disabled' }}</p></li>
+        </ul>
+      </div>
+      <div class="ms-auto bd-highlight">
+        <button (click)="emailTwoFactor()" class="btn mt-2 btn-sm {{!user.twoFactorEmail ? 'btn-success' : 'btn-danger'}} d-inline float-end">{{!user.twoFactorEmail ? 'Enable' : 'Disable' }}</button>
+      </div>
+    </div>
+  </div>
+</div>
 
+<h3 class="pb-2 border-bottom">Recovery options</h3>
+
+<div class="list-group mb-3">
+  <div class="list-group-item">
+    <div class="d-flex bd-highlight">
+      <div class="bd-highlight">
+        <p class="mb-1">Recovery codes</p>
+        <ul class="mb-1">
+          <li><p class="{{user.twoFactorEmail ? 'text-success' : 'text-danger'}} m-0">{{user.twoFactorEmail ? 'Enabled' : 'Disabled' }}</p></li>
+        </ul>
+      </div>
+      <div class="ms-auto bd-highlight">
+        <button (click)="emailTwoFactor()" class="btn mt-2 btn-sm {{!user.twoFactorEmail ? 'btn-success' : 'btn-danger'}} d-inline float-end">{{!user.twoFactorEmail ? 'Enable' : 'Disable' }}</button>
+      </div>
+    </div>
+  </div>
+</div>
